--- a/.github/workflows/aws_ecr.yml
+++ b/.github/workflows/aws_ecr.yml
@@ -37,5 +37,5 @@ jobs:
           ECR_REPOSITORY: react-sc
           IMAGE_TAG: latest
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -f Dockerfile.prod -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
